    have been upgraded to R6RS (R5.91RS) (nothing is actually changed)

  - Definition of dotted list length is changed to SRFI-1's from
    SigScheme-speciific one. SCM_LISTLEN_DOTTED(), SCM_DOTTED_LISTP() and other
    dotted list-related macros and functions have been changed so

  - Remove initial hyphen support for symbols (such as '-sym). Use
    (string->symbol "-sym") instead

  - (scm_set_lib_path): Change to holding copied library path string

  - (scm_return_value): Removed

  - Change the low-level port API to fix the design error about error handling
    (get_byte() and peek_byte() were not able to detect read error)

* Fixes

  - Fix potential SEGV on long string parsing

  - Fix possible crash on parsing R5RS-reserved chars |[]{}

  - Fix broken GC on systems that have 8-byte aligned malloc(3) such as Cygwin

  - Fix possible crash on parsing script prelude longer than 64 chars

  - Fix possible crash on parsing script prelude that only has
    "#! /usr/bin/env"

  - Fix a broken error handling on character encoding switching when
    !SCM_USE_MULTIBYTE_CHAR

  - Fix infinite loop on raising error objects that contain circular list when
    SCM_USE_HYGIENIC_MACRO

  - [R5RS] Fix invalid acceptance of definition form on where neither toplevel
    nor internal definition is allowed

  - [R5RS] Fix invalid acceptance of 'begin' that contains definitions and
    expressions intermixed

  - [R5RS] Fix invalid acceptance of <body> that contains definitions and
    expressions intermixed on 'let', 'let*', 'letrec' and function form
    'define'

  - [R5RS] Fix invalid no-expressions <body> acceptance of 'let', 'let*',
    'letrec' and function form 'define'

  - [R5RS] Fix invalid acceptance of binding syntactic keyword as value on
    'define', 'let', 'let*', 'letrec' and 'do'

  - [R5RS] Fix broken per-iteration env isolation of 'do'

  - [R5RS] Fix proper tail recursion incapability of '=>' form of 'cond'
